# PythonPracticalAIBookCode

./: .gitignore  README.md
LNN_logical_neural_networks/: NOT_YET_IN_BOOK.md  README.md  lnn_test1.py  lnn_test2.py  lnn_test3.py  lnn_test4.py
Soar/blocks-world/: bw.py  bw.soar
deep-learning/: lstm_example_for_practical_ai_in_python_book.py  sentence_transformer.py  wisconsin_data_github.py
deep-learning/huggingface_apis/: README.md  gpt2_test.py  hf-conversation.py  hf-coreference.py  hf-qa.py  qa.py  (+4 more)
graphs/: NOT_YET_IN_BOOK.md  subgraph_isomorphims_1.py  subgraph_isomorphims_2.py  subgraph_isomorphims_3.py
jupyter_notebooks/: LSTM_example_for_Practical_AI_in_Python_book.ipynb  lstm_example_for_practical_ai_in_python_book.py  wisconsin_data_github.ipynb
llm-ollama-local/: Makefile  README.md  pyproject.toml
llm-ollama-local/context_data/: entity_relationships.txt  science_advisor.txt
llm-ollama-local/src/llm_ollama_local/: __init__.py
llm-ollama-local/tests/: test_completion_with_context.py  test_module.py
llm_openai/: Makefile  README.md  pyproject.toml  requirements.txt
llm_openai/src/llm_openai/: __init__.py  __main__.py
machine-learning/: classification.py  labeled_cancer_data.csv  labeled_test_data.csv  load_data.py
minizinc-constraint-satisfaction/: test1.mzn  us_states.mzn  us_states.py
neo4j/: movie1.py  test1.py
probabilistic-scipy/: card1.py  norm_dist.py
scikit-learn/: data_set_examples.py  p.py
semantic-web/: README.md  wikidata_example.py
swi-prolog/: family.pl  family.py  hackernews.py  n_queens.pl  n_queens.py
(+50 files in other folders)
