[project]
name = "llm-ollama-local"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mark Watson", email = "markw@markwatson.com" }
]
dependencies = [
    "ollama>=0.2.1",
    "pytest>=8.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
"llm-ollama-local" = "llm_ollama_local:main"

[tool.rye]
managed = true
dev-dependencies = []
dependencies = ["pytest"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_ollama_local"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = ["tests"]